kubernetes/apps/trilium-notes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium-notes
  namespace: trilium-notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trilium-notes
  template:
    metadata:
      labels:
        app: trilium-notes
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: trilium
        image: zadam/trilium:latest@sha256:93cb2cd4a6709858c154bab7cba0a7d397969685f507daecb6bbdc409d81304b
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: trilium-data
          mountPath: /srv/trilium-data
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
      volumes:
      - name: trilium-data
        persistentVolumeClaim:
          claimName: trilium-notes-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: trilium-svc
spec:
  selector:
    app: trilium-notes
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
