kubernetes/apps/trilium-notes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external-trilium-notes
  namespace: trilium-notes
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.ninebasetwo.net/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.ninebasetwo.net/oauth2/start?rd=$scheme://$host$request_uri"
spec:
  ingressClassName: nginx 
  rules:
  - host: trilium.ninebasetwo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trilium-svc
            port:
              number: 8080
  tls:
  - hosts:
    - trilium.ninebasetwo.net
    secretName: trilium-tls
